# embargo

./: .gitignore  Cargo.toml  README.md
examples/hello_world/: Embargo.toml
examples/hello_world/include/: Test.hpp
examples/hello_world/src/: main.cpp
examples/multi_file/: compile_flags.txt
examples/multi_file/src/: Test.cpp  main.cpp
src/: main.rs  parallel_runner.rs
