[package]
name = "embargo"
version = "0.1.1"
edition = "2021"
description = "A simple and fast opinionated build system for c/c++"
license = "GPL-3.0"
repository = "https://github.com/Valchap/embargo"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["c", "c++", "build-tool"]

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
toml = "0.7.3"
walkdir = "2.3.3"
